@@ -166,7 +166,9 @@ static GameDefs g = {
 	0,	// LESS_ARCTIC_TOWNS
 	60, // OCEAN
 	16, // CONTINENT_SIZE
-	0,	// ARCHIPELAGO
+	10,	// ARCHIPELAGO
+	30, // SEVER_LAND_BRIDGES
+	10, // SEA_LIMIT
 	0,	// LAKES_EXIST
 	GameDefs::NO_EFFECT, // LAKE_WAGE_EFFECT
 	0,	// LAKESIDE_IS_COASTAL
