@@ -166,6 +166,8 @@ static GameDefs g = {
 	60, // OCEAN
 	16, // CONTINENT_SIZE
 	0,	// ARCHIPELAGO
+	0, // SEVER_LAND_BRIDGES
+	0, // SEA_LIMIT
 	0,	// LAKES_EXIST
 	GameDefs::NO_EFFECT, // LAKE_WAGE_EFFECT
 	0,	// LAKESIDE_IS_COASTAL
