@@ -167,6 +167,8 @@ static GameDefs g = {
 	60, // OCEAN
 	16, // CONTINENT_SIZE
 	0,	// ARCHIPELAGO
+	30, // SEVER_LAND_BRIDGES
+	10, // SEA_LIMIT	
 	0,	// LAKES_EXIST
 	GameDefs::NO_EFFECT, // LAKE_WAGE_EFFECT
 	0,	// LAKESIDE_IS_COASTAL
