@@ -712,3 +712,6 @@ Changes from 4.0.10 -> 5.0.0
    -- Added an option to limit tact-5 leaders based on the number of points
       spent on war.
    -- Added coracles.
+   -- CleanUpWater() now uses recursive calls to CheckSea() and is configurable
+      via SEA_LIMIT. Added SEVER_LAND_BRIDGES gamedef to control severing
+      behaviour.
